2016-01-14	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/cinestarov.sh: GMail obviously interprets line endings as parts of a URL

2016-01-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/cinestarov.sh: urls added/corrected
	didn't register regular movies, which aren't special OV-only screenings

2016-01-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/cinestarov.sh: Cinestar OV movies in Chemnitz

2015-11-10	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/git/pullall.sh: ff-merging from all remotes into all branches

2015-10-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/battery.sh: compatible with multiple batteries
	tabular output
	no energy flow rates etc.
	printing rate too

2015-05-07	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/ensnbautoadmin.sh: auto-enter admin password
	supporting all LATIN1 characters

2015-04-12	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/battery.sh: only showing useful values

2015-03-15	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/interactive/i3-batterycheck.sh: battery-nagbar service added
	hours, minutes, seconds... upower sucks
	fixed some pipes
	hiding the nagbar after laptop has been plugged in

2015-03-10	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/git/pushall.sh: pulling before pushing
	informing about remoteless repositories

2015-03-04	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* src/git/changelogupdate.sh: correctly handling similarly named files in different directories

2015-02-05	Erik E. Lorenz	<erik.e.lorenz@gmail.com>

	* autogen.sh: not removing COPYING anymore, so 'make dist' does not fail

	* configure.ac: auto-generated with src/build/create-configureac.sh
	--enable-FEATURE/--disable-FEATURE for every src subdirectory added
	enable/disable options: formatting as proper help strings

	* .gitignore: COPYING added

	* Makefile.am: auto-generated with src/build/create-makefileam.sh